--- a/weapp/termite/static/termite_js/app/component/appkit/groupdescription/groupdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/groupdescription/groupdescription.html
@@ -37,14 +37,26 @@
                     <div class="wui-i-choose_group_box">
                         <span>选择团购</span>
                         <span class="wui-i-end_time">开团截止日期：{{component.model.end_time}}</span>
-                        	<label for="radio_item_{{component.cid}}" style="display:block; padding: 3px 0px;">
-                                <span id="radio_item_{{component.cid}}" name="radio_{{component.parent_component.cid}}"
+                        	<ul
+                                class="wui-i-items xa-inputControl"
+                                data-input-name="{{component.model.title}}"
+                                data-validate='require-select-span::请选择团购类型'
+                                data-check-className='radio-select checkbox-select'
+                            >
+                                <li class="wui-i-item xa-inputControl" data-component-cid="{{component.cid}}"
+                                    data-input-name="{{component.model.title}}"
+                                >
+                                    <div  style="padding: 3px 0;">
+                                        <span id="radio_item_{{component.cid}}" name="radio_{{component.parent_component.cid}}"
                                       data-type="radio" span-type="selection"  class="selection-radio" data-input-name="{{ component.model.group_type }}">
-                                </span>
-                                <span class="ml5 xa-itemTitle" style="margin-left: 30px!important;line-height: 22px;">{{ component.model.group_type }}人团</span>
-                                <span class="ml5 xa-itemTitle" style="margin-left: 20px!important;line-height: 22px;">拼团时间{{ component.model.group_days }}天</span>
-                                <span class="ml5 xa-itemTitle" style="margin-left: 20px!important;line-height: 22px;">团购价：{{ component.model.group_price }}元</span>
-                            </label>
+                                        </span>
+                                        <span class="ml5 xa-itemTitle" style="margin-left: 30px!important;line-height: 22px;">{{ component.model.group_type }}人团</span>
+                                        <span class="ml5 xa-itemTitle" style="margin-left: 20px!important;line-height: 22px;">拼团时间{{ component.model.group_days }}天</span>
+                                        <span class="ml5 xa-itemTitle" style="margin-left: 20px!important;line-height: 22px;">团购价：{{ component.model.group_price }}元</span>
+                                    </div>
+                                </li>
+                            </ul>
+
                     </div>
                     <div class="wui-i-group_box_progress none">
                         <span>团购进度</span>
