--- a/weapp/apps/customerized_apps/group/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/group/templates/editor/workbench.html
@@ -220,6 +220,11 @@
             'material_image':material_image,
             'share_description':share_description
             };
+
+            console.log('!!!!!!!!!!###########SSSSSSSSSSS>>>>>>>>>>>>>>');
+            console.log('====');
+
+            console.log(args);
             if (isCreateNewData) {
                 var method = 'put';
                 args['related_page_id'] = relatedPageId;
