1、微众卡兑换功能，暂时仅限惠惠公众号 2、优化微众卡余额查询

--- a/weapp/static_v2/js/view/common_select_website_link_view/template.html
+++ b/weapp/static_v2/js/view/common_select_website_link_view/template.html
@@ -22,5 +22,8 @@
     <li><a href="javascript:void(0);" class="xa-itemMenu" data-type="shengjingCustom">盛景定制APP</a></li>
     {{/if}}
     <li><a href="javascript:void(0);" class="xa-itemMenu" data-type="sign">签到</a></li>
+    {{if card_exchange}}
+    <li><a href="javascript:void(0);" class="xa-itemMenu" data-type="cardExchange">微众卡兑换</a></li>
+    {{/if}}
 </ul>
 </script>
