--- a/weapp/static_v2/js/view/weixin_menu_link_view/template.html
+++ b/weapp/static_v2/js/view/weixin_menu_link_view/template.html
@@ -17,5 +17,8 @@
     <li><a href="javascript:void(0);" class="xa-linkItemMenu" data-type="shengjingCustom">盛景定制APP</a></li>
     {{/if}}
     <li><a href="javascript:void(0);" class="xa-linkItemMenu" data-type="sign">签到</a></li>
+    {{if card_exchange}}
+    <li><a href="javascript:void(0);" class="xa-linkItemMenu" data-type="cardExchange">微众卡兑换</a></li>
+    {{/if}}
 </ul>
 </script>
