--- a/weapp/termite/static/v4/css/app_widget.css
+++ b/weapp/termite/static/v4/css/app_widget.css
@@ -1879,3 +1879,67 @@ li.wui-selectBox-display-table {
     float: right;
     line-height: 1.4rem;
 }
+.wui-group-container .wui-i-powerbar_group{
+    position: relative;
+    top:-2rem;
+    width: 100%;
+    height: 2rem;
+    margin-left: auto;
+    margin-right: auto;
+}
+.wui-group-container .wui-i-powerbar_group .wui-i-box{
+    height: 43px;
+}
+
+.wui-group-container .wui-i-powerbar_group .wui-i-percentbox{
+    font-size:10px;
+    color:white;
+    width: 40px;
+    height: 40px;
+    background: no-repeat url("/termite_static/img/component/redpacket/icon_sprite.png");
+    background-size: 291%;
+    background-position: 2px 0px;
+    text-align: center;
+    padding-top: 10px;
+}
+.wui-group-container .wui-i-powerbar_group .wui-i-bar{
+    width: auto;
+    height: 4px;
+    background:#500001;
+    margin-left: 60px;
+    margin-right: 60px;
+    border-radius: 2px;
+}
+.wui-group-container .wui-i-powerbar_group .wui-i-box{
+    width: auto;
+    /*background-color:green;*/
+    margin-left: 40px;
+    margin-right: 80px;
+}
+.wui-group-container .wui-i-powerbar_group .wui-i-percentbox{
+    position: relative;
+    left: 0%;
+    transition: left 3s ease-in-out;
+    -moz-transition: left 3s ease-in-out; /* Firefox 4 */
+    -webkit-transition: left 3s ease-in-out; /* Safari 和 Chrome */
+    -o-transition: left 3s ease-in-out; /* Opera */
+
+}
+.wui-group-container .wui-i-powerbar_group .wui-i-bar_process{
+    background: #FF6E02;
+    width: 0%;
+    height: 100%;
+    border-radius: 2px;
+    transition: width 3s ease-in-out;
+    -moz-transition: width 3s ease-in-out; /* Firefox 4 */
+    -webkit-transition: width 3s ease-in-out; /* Safari 和 Chrome */
+    -o-transition: width 3s ease-in-out; /* Opera */
+}
+
+.wui-group-container .wui-i-powerbar_group .wui-i-power_money{
+    width: 70%;
+    margin: 5px auto 5px auto;
+    font-size:smaller;
+    color:#ff2742;
+    text-align: right;
+}
