--- a/weapp/termite/static/termite_js/app/component/appkit/groupdescription/groupdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/groupdescription/groupdescription.html
@@ -66,6 +66,17 @@
                             <b class="xa-minute">{% if component.model.timing_value.minute %}{{component.model.timing_value.minute}}{% else %}59{% endif %}</b>分
                             <b class="xa-second">{% if component.model.timing_value.second %}{{component.model.timing_value.second}}{% else %}59{% endif %}</b>秒
                         </div>
+                        <div class="wui-i-powerbar_group">
+                            <div class="wui-i-box">
+                                <div class="wui-i-percentbox xa-i-percentbox">0人</div>
+                            </div>
+                            <div class="wui-i-bar">
+                                <div class="wui-i-bar_process xa-i-bar_process"></div>
+                            </div>
+                            <div class="wui-i-power_money wa-i-total_number">
+                                <p>0人</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="wui-i-btngroup">
                         <button class="wui-i-btn-closed wa-closed wui-hide">活动已结束</button>
