--- a/weapp/termite/static/termite_js/app/component/appkit/groupdescription/groupdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/groupdescription/groupdescription.html
@@ -7,8 +7,7 @@
                 <div class="wui-i-shop_circle">
                     <img src="/static/img/default_shop_avatar.png">
                 </div>
-                <div class="wui-i-title-pic">
-                </div>
+                <div class="wui-i-title-pic"></div>
                 <div class="wui-i-rules xa-rules">
                     <div class="wui-i-title xa-i-title">
                         <span class="wui-i-rules-title-content xa-i-rules-title-content">
@@ -33,7 +32,14 @@
             <div class="wui-i-description xa-description cl">
                 <div class="wui-i-description-content">
                     <div class="wui-i-product-title">{{ component.model.title }}</div>
-                    <div class="wui-i-product-img">{{ component.model.product_img }}</div>
+                    <div class="wui-i-product-price-group">
+                        <span class="wui-i-product-price-group-title">团购价</span>
+                        <span class="wui-i-product-price-group-original-price">240元</span>
+                        <span class="wui-i-product-price-group-group-price">140元</span>
+                    </div>
+                    <div class="wui-i-product-img">
+                        <img src="/standard_static/test_resource_img/hangzhou1.jpg">{{ component.model.product_img }}
+                    </div>
                     <div class="wui-i-choose_group_box">
                         <span>选择团购</span>
                         <span class="wui-i-end_time">开团截止日期：{{component.model.end_time}}</span>
@@ -46,7 +52,7 @@
                                 <li class="wui-i-item xa-inputControl" data-component-cid="{{component.cid}}"
                                     data-input-name="{{component.model.title}}"
                                 >
-                                    <div  style="padding: 3px 0;">
+                                    <div style="padding: 3px 0;">
                                         <span id="radio_item_{{component.cid}}" name="radio_{{component.parent_component.cid}}"
                                       data-type="radio" span-type="selection"  class="selection-radio" data-input-name="{{ component.model.group_type }}">
                                         </span>
