--- a/weapp/termite/static/termite_js/app/component/appkit/groupdescription/groupdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/groupdescription/groupdescription.html
@@ -79,9 +79,7 @@
                             <div class="wui-i-bar">
                                 <div class="wui-i-bar_process xa-i-bar_process"></div>
                             </div>
-                            <div class="wui-i-power_money wa-i-total_number">
-                                <p>0人</p>
-                            </div>
+                            <span class="wui-i-total_number wa-i-total_number"><p>0人</p></span>
                         </div>
                     </div>
                     <div class="wui-i-btngroup">
