更新一个样式

--- a/weapp/apps/customerized_apps/group/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/group/templates/editor/workbench.html
@@ -14,10 +14,15 @@
             display: inline-block;
             margin-left: 2px;
         }
-        .xui-addDynamicComponent{
+        div.xui-addDynamicComponent{
             width: 80px;
             height: 30px;
             line-height: 30px;
+            margin-left: 47px !important;
+            color:#888 !important;
+        }
+        div.xui-addDynamicComponent span{
+            color:#888 !important;
         }
         .btn.xui-i-triggerButton.xui-i-searchBtn{
             position: relative;
